refactor: re-use carillon-core
